--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -155,3 +155,15 @@ body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+.sidebar-content {
+  transform: translateX(100%); /* Start off-screen */
+}
+
+.sidebar-content.translate-x-0 {
+  transform: translateX(0); /* Slide in */
+}
+
+.sidebar-content.translate-x-full {
+  transform: translateX(100%); /* Slide out */
+}
